# CODEX_SKILL

./: AGENTS.md  README.md  assumption_register_diff.md  tmp_samsung_c_review_fields.json  tmp_samsung_c_review_pages.json
_holding-root/2026-04-02-workspace-compaction/legacy-package-export/source/: AGENTS.md  INSTALL_CODEX.md  README.md  mstack.py  pyproject.toml
_holding-root/2026-04-02-workspace-compaction/legacy-package-export/source/core/: assets.py  parallel_executor.py  pipeline.py  pipeline_adapter.py  pipeline_recipes.py  pipeline_runner.py  types.py
codex-openspace-merge-pack/: AGENTS.merge-snippet.md  (+1 more)
mstack-codex-package-1.1.0/source/: .gitignore  AGENTS.md  INSTALL_CODEX.md  pyproject.toml
mstack-codex-package-1.1.0/source/.agents/plugins/: marketplace.json
mstack-codex-package-1.1.0/source/core/: assets.py  sql_jobstore_ids.py  types.py
mstack-codex-package-1.1.0/source/dist-delivery/mstack-codex-portable-1.1.0/: PORTABLE_INSTALL_GUIDE.md  START_HERE.md
mstack-codex-package-1.1.0/source/dist-wheel/: mstack-1.1.0-py3-none-any.whl
mstack-codex-package-1.1.0/source/scripts/: codex_runtime_smoke.py  run_codex_skill_validation.py
mstack-codex-package-1.1.0/source/skills-codex/ship/: SKILL.md
mstack-codex-package-1.1.0/source/skills/qa/: SKILL.md
mstack-codex-package-1.1.0/source/tests/: test_assets.py  test_codex_runtime_smoke.py  test_codex_skills.py  test_codex_validation_reporting.py  test_config.py  test_cost.py  test_cost_3tier.py  test_cost_core.py  test_dashboard.py  test_install_codex_cli.py  test_mstack_pipeline_cli.py  test_mstack_room_log_cli.py  test_packaging_install.py  test_pipeline_adapter.py  test_pipeline_generic_backends.py  test_pipeline_recipes.py  test_pipeline_runner.py
mstack-codex-package-1.1.0/source/tests/debug/: test_hypothesis_h1.py
(+379 files in other folders)
