[project]
name = "mstack"
version = "1.1.0"
description = "Claude Code Agent Teams - modular CLI"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]

[tool.setuptools]
py-modules = ["mstack", "cost"]

[tool.setuptools.package-data]
"core._assets" = [
  "docs/*.md",
  "skills/*/SKILL.md",
  "skills-codex/*/SKILL.md",
  "skills-codex/*/agents/*.yaml",
  "skills-codex/*/references/*.md",
  "plugins/*/.codex-plugin/*.json",
  "plugins/*/*.md",
  "plugins/*/skills/*/SKILL.md",
  "plugins/*/skills/*/agents/*.yaml",
  "plugins/*/skills/*/references/*.md",
  "plugins/*.template.json",
  "presets/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short --ignore=tests/debug"

[project.scripts]
mstack = "mstack:main"
